--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,42 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  width: 500px;
+  margin: 0 auto;
 }
 
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: auto;
+  padding: 10px;
 }
 
 .title {
   background: #e3f4ff;
+  margin-bottom: 8px;
+  padding: 8px;
+  font-size: 16px;
+  
 }
 
 .content {
   background: #e3f4ff;
+  margin-bottom: 8px;
+  padding: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  padding: 10px;
+  
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  padding: 10px 20px;
+  display: block;
+  margin-left: 130px;
 }
